--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --hot --inline",
-    "server": "node-inspector --web-port 8888 & node-dev server/server",
+    "server": "node-inspector --web-port 8888 & node-dev server",
     "test": "ava --watch"
   },
   "ava": {
@@ -53,8 +53,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-register": "^6.9.0",
     "body-parser": "^1.15.1",
-    "cors": "^2.7.1",
     "express": "^4.13.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
