--- a/package.json
+++ b/package.json
@@ -38,12 +38,17 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^0.15.2",
+    "css-loader": "^0.25.0",
     "enzyme": "^2.3.0",
     "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
     "node-dev": "^3.1.3",
     "node-inspector": "^0.12.8",
+    "node-sass": "^3.9.3",
     "react-addons-test-utils": "^15.2.0",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.1",
+    "style-loader": "^0.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
