--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "body-parser": "^1.15.2",
     "copy-webpack-plugin": "^3.0.1",
     "express": "^4.14.0",
+    "firebase": "^3.4.0",
+    "firebase-tools": "^3.0.7",
+    "ramda": "^0.22.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
