seperated sass hot reloading script into a seperate script (package.json) as it was bugged
I believe because it was happening after the webpack script (specifically using && not familiar with that) which was causing it not to run (because webpack doesn't stop, so doesn't execute the &&?). I believe there is still some issues with sass (sometimes removed code doesn't change on build, not sure why) so my sass setup is definitely suboptimal

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "dev-server": "webpack-dev-server",
-    "serve": "webpack-dev-server --hot --inline && sass --watch client/css:client/css",
+    "serve": "webpack-dev-server --hot --inline",
+    "sass-watch": "sass --watch client/css:client/css",
     "build": "webpack && npm run transpile",
     "start": "node server/lib/server",
     "server": "node-inspector --web-port 5858 & npm run transpile && node-dev --debug server/lib/server",
